[package]
name = "rgsm"
version = "1.0.4"
edition = "2021"
authors = ["Michael Goppert goppert@cs.utexas.edu"]
license = "MIT"
description = "An assembler for the Gheith ISA written in Rust"
readme = "README.md"
homepage = "https://github.com/migopp/rgsm"
repository = "https://github.com/migopp/rgsm"
exclude = [
    "tests/*",
    "hex/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
regex = "1.10.4"
